# esp-sr

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.new  Makefile  README.md  README_cn.md  component.mk  conftest.py  idf_component.yml  libversion  sdkconfig  sdkconfig.defaults
.github/workflows/: upload_component.yml
acoustic_algorithm/: README.md
acoustic_algorithm/include/: esp_aec.h  esp_agc.h  esp_mase.h  esp_ns.h
audio_front_end/: README_CN.md  esp_afe_sr_1mic.c
audio_front_end/include/: esp_afe_sr_iface.h
ci/: pre_commit.yml
docs/: Doxyfile  check_doc_chars.py  conf_common.py  convert-md-to-rst.sh  page_redirects.txt  requirements.txt
docs/_static/: docs_version.js
docs/audio_front_end/: Espressif_Microphone_Design_Guidelines.md  README.md  README_CN.md
docs/en/: 404.rst  conf.py  index.rst
docs/flash_model/: README.md  README_CN.md
docs/myapp/: pyvenv.cfg
docs/performance_test/: README.md
docs/speech_command_recognition/: README.md  README_cn.md
docs/wake_word_engine/: ESP_Wake_Words_Customization.md  README.md  README_cn.md
docs/zh_CN/: conf.py  index.rst
esp-tts/: CMakeLists.txt  README.md
include/: dl_lib.h  dl_lib_matrix.h  dl_lib_matrixq8.h  esp_afe_sr_iface.h  esp_mn_iface.h  esp_wn_iface.h  mn_process_commands.h
include/esp32/: dl_lib.h  dl_lib_coefgetter_if.h  dl_lib_conv_queue.h  dl_lib_convq8_queue.h  dl_lib_convq_queue.h  dl_lib_matrix.h  esp_afe_config.h  esp_afe_sr_iface.h  esp_afe_sr_models.h  esp_mfcc_iface.h  esp_mfcc_models.h  esp_mn_iface.h  esp_nsn_models.h  esp_speech_features.h  esp_vad.h  esp_webrtc.h  esp_wn_iface.h  esp_wn_models.h  flite_g2p.h  model_path.h
include/esp32c3/: dl_lib.h  esp_afe_sr_iface.h  esp_mase.h  esp_speech_features.h
include/esp32c5/: dl_lib_convq8_queue.h  esp_afe_config.h  esp_afe_sr_iface.h  esp_mn_iface.h  esp_sr_webrtc.h  esp_wn_models.h
include/esp32c6/: esp_aec.h  esp_afe_aec.h  esp_afe_sr_iface.h  esp_mfcc_fbank_int16.h  esp_mfcc_iface.h  esp_vadn_iface.h  esp_wn_models.h
include/esp32p4/: esp_aec.h  esp_afe_aec.h  esp_afe_config.h  esp_afe_sr_iface.h  esp_afe_sr_models.h  esp_agc.h  esp_mfcc_models.h  esp_mn_models.h  esp_nsn_models.h  esp_vadn_models.h  esp_wn_models.h  flite_g2p.h
include/esp32p4_eco5/: dl_lib_coefgetter_if.h  dl_lib_convq_queue.h  dl_lib_matrix.h  dl_lib_matrixq8.h  esp_aec.h  esp_afe_sr_iface.h  esp_nsn_iface.h  esp_speech_features.h  esp_wn_iface.h  esp_wn_models.h
include/esp32s2/: dl_lib_convq_queue.h  dl_lib_matrixq.h  esp_afe_config.h  esp_mn_iface.h  esp_nsn_iface.h  esp_wn_iface.h
include/esp32s3/: dl_lib_convq8_queue.h  dl_lib_matrix.h  dl_lib_matrixq8.h  esp_aec.h  esp_aec_nlp.h  esp_afe_aec.h  esp_afe_config.h  esp_afe_sr_iface.h  esp_afe_sr_models.h  esp_mase.h  esp_mfcc_models.h  esp_mn_iface.h  esp_mn_models.h  esp_nsn_models.h  esp_speech_features.h  esp_vad.h  esp_vadn_iface.h  esp_vadn_models.h  esp_wn_models.h  mn_process_commands.h
include/esp32s31/: c_speech_features_config.h  dl_lib_matrixq.h  esp_aec.h  esp_afe_aec.h  esp_afe_config.h  esp_afe_doa.h  esp_afe_sr_models.h  esp_agc.h  esp_doa.h  esp_mfcc_models.h  esp_speech_features.h  flite_g2p.h
lib/: Kconfig
lib/include/: dl_lib.h  dl_lib_coefgetter_if.h  dl_lib_conv_queue.h  dl_lib_convq_queue.h  dl_lib_matrix.h  dl_lib_matrixq.h
main/: Kconfig  audio_process.c  component.mk  main.c  multinet_test.c  wakenet_test.c
model/: CMakeLists.txt  movemodel.py  pack_model.py
speech_command_recognition/: README.md  README_cn.md  mn_process_commands.c
speech_command_recognition/include/: esp_mn_iface.h  esp_mn_models.h  mn_process_commands.h  multinet1_en.h  multinet3_ch.h  multinet3_en.h  multinet5_en.h  multinet5_en_q8.h
speech_command_recognition/tool/: README  multinet_g2p.py
speech_commands_recognition/: README.md  demo.md  mn_process_commands.c
speech_commands_recognition/include/: esp_mn_iface.h  esp_mn_models.h  mn_process_commands.h
src/: esp_afe_sr_1mic.c  esp_mn_speech_commands.c  esp_process_sdkconfig.c  esp_sr_debug.c  mn_process_commands.c  model_path.c
src/include/: esp_mn_speech_commands.h  esp_process_sdkconfig.h  esp_sr_debug.h  model_path.h
test/: CMakeLists.txt  test_afe.c  test_chinese_tts.c  test_multinet.c  test_wakenet.c  unity_multinet.c  unity_wakenet.c
test_apps/: .build-rules.yml  CMakeLists.txt  README.md  build_apps.py  partitions.csv  pytest_esp_sr.py  requirements.txt
test_apps/esp-sr/: CMakeLists.txt  partitions.csv  partitions_esp32.csv  pytest_esp_sr.py  sdkconfig.ci copy.p4_afe  sdkconfig.ci.afe  sdkconfig.ci.esp32  sdkconfig.ci.esp32p4_eco5  sdkconfig.ci.mn2_cn  sdkconfig.ci.mn5q8_cn  sdkconfig.ci.mn5q8_en  sdkconfig.ci.mn6_cn  sdkconfig.ci.mn6_en  sdkconfig.ci.mn7_en  sdkconfig.ci.nsnet1  sdkconfig.ci.nsnet2  sdkconfig.ci.p4_afe  sdkconfig.ci.p4_mn7_cn  sdkconfig.ci.p4_mn7_en  sdkconfig.ci.p4_nsnet2  sdkconfig.ci.p4_wn9_hilexin  sdkconfig.ci.vadnet  sdkconfig.ci.wn9_hilexin  sdkconfig.ci.wn9s_hilexin  sdkconfig.defaults  sdkconfig.defaults.esp32p4
test_apps/esp-sr/main/: CMakeLists.txt  main.c  test_afe.c  test_afe.cpp  test_mfcc.cpp  test_multinet.c  test_multinet.cpp  test_vadnet.cpp  test_wakenet.c  test_wakenet.cpp
test_apps/esp-sr/main/samples/: audio_test_file.h
test_apps/esp-tts/: pytest_esp_tts.py  sdkconfig.ci.esp32c5  sdkconfig.ci.p4  sdkconfig.ci.s3  sdkconfig.ci.xiaoxin  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
test_apps/esp32c5/: CMakeLists.txt  partitions.csv  sdkconfig.ci.esp32c3  sdkconfig.ci.esp32c3_wn9  sdkconfig.ci.esp32c5_wn9  sdkconfig.ci.esp32c6_wn9  sdkconfig.ci.esp32s2  sdkconfig.ci.esp32s2_wn9  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  da_kai_kong_tiao.h  tell_me_a_joke.h  test_app_main.c  test_multinet.c
tool/: README.md  multinet_g2p.py  multinet_pinyin.py  requirements
tool/fst/: bpe.model  (+2 more)
wake_word_engine/: ESP_Wake_Words_Customization.md  README.md  README_cn.md  乐鑫语音唤醒词定制流程.md
wake_words_engine/: ESP_Wake_Words_Customization.md  README.md
(+322 files in other folders)
